@@ -1,8 +1,8 @@
 [tox]
 envlist =
     lint
-    py{27,34,35,36}-django111-redis{2,latest,master}
-    py{34,35,36,37}-django20-redis{2,latest,master}
+    py{35,36}-django111-redis{2,latest,master}
+    py{35,36,37}-django20-redis{2,latest,master}
     py{35,36,37}-django21-redis{2,latest,master}
     py{35,36,37}-django22-redis{2,latest,master}
     py{36,37}-djangomaster-redis{2,latest,master}
@@ -23,7 +23,6 @@ deps =
     django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
     djangomaster: https://github.com/django/django/archive/master.tar.gz
-    mock
     msgpack>=0.6.0
     redis2: redis>=2.10.0,<3.0.0
     redismaster: https://github.com/andymccurdy/redis-py/archive/master.tar.gz
